internal/fixtures/architecture/negative/python-layer-absolute/apps/api/src/deepwork_api/domain/bad.py
from deepwork_api.application.work import VALUE

FORBIDDEN = VALUE
